Updating to push to new remote branch

--- a/prod/client/assets/index.spa.html
+++ b/prod/client/assets/index.spa.html
@@ -2,8 +2,8 @@
 <html {{ HTML_ATTRS }}>
   <head>
     {{ HEAD }}
-  <link href="/assets/common.62200c479ea51dfae394.css" rel="stylesheet"></head>
+  <link href="/assets/common.2ad8fa0064d5fcf555fe8621ecf14f68.css" rel="stylesheet"></head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
-  <script type="text/javascript" src="/assets/manifest.8e46a99b33e264b3319a.js"></script><script type="text/javascript" src="/assets/vendor.bundle.74c56f9cfaf8d93fbfb3.js"></script><script type="text/javascript" src="/assets/nuxt.bundle.62200c479ea51dfae394.js"></script></body>
+  <script type="text/javascript" src="/assets/manifest.0c580ad792926839685d.js"></script><script type="text/javascript" src="/assets/common.edc9b3f07183a20e5cfb.js"></script><script type="text/javascript" src="/assets/app.3847bc30f0bb69913242.js"></script></body>
 </html>
