update styles with mui-css

--- a/prod/client/assets/index.spa.html
+++ b/prod/client/assets/index.spa.html
@@ -2,8 +2,8 @@
 <html {{ HTML_ATTRS }}>
   <head>
     {{ HEAD }}
-  <link href="/assets/common.90315f7aefe3fdddfaf1056504853915.css" rel="stylesheet"></head>
+  <link href="/assets/app.7719562d20af3b00ee3f21b510e16e8c.css" rel="stylesheet"></head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
-  <script type="text/javascript" src="/assets/manifest.c1a7440e184aa0a451bf.js"></script><script type="text/javascript" src="/assets/common.420fdbe1eb3c4c59efab.js"></script><script type="text/javascript" src="/assets/app.14131831a375abe317db.js"></script></body>
+  <script type="text/javascript" src="/assets/manifest.e790fd382e75b83a9841.js"></script><script type="text/javascript" src="/assets/vendor.b8445a2d00fe96384dd2.js"></script><script type="text/javascript" src="/assets/app.69ca4861c784457d8c9f.js"></script></body>
 </html>
