Back to using promise for render. Added Header, Footer components. Added my links

--- a/prod/client/assets/index.spa.html
+++ b/prod/client/assets/index.spa.html
@@ -2,8 +2,8 @@
 <html {{ HTML_ATTRS }}>
   <head>
     {{ HEAD }}
-  <link href="/assets/app.7719562d20af3b00ee3f21b510e16e8c.css" rel="stylesheet"></head>
+  <link href="/assets/common.1a9582b6ea6db6eb11155c56e5abc48f.css" rel="stylesheet"></head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
-  <script type="text/javascript" src="/assets/manifest.a91bb880fd8a591ca3fd.js"></script><script type="text/javascript" src="/assets/vendor.dfb8ae8da965d7f1a132.js"></script><script type="text/javascript" src="/assets/app.4fe71c3e448bfdc8c500.js"></script></body>
+  <script type="text/javascript" src="/assets/manifest.86c615919ca155e9ea00.js"></script><script type="text/javascript" src="/assets/common.c1d4db95c43fd503a449.js"></script><script type="text/javascript" src="/assets/app.56e26cde9279648bf4e5.js"></script></body>
 </html>
