--- a/prod/client/assets/index.spa.html
+++ b/prod/client/assets/index.spa.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html {{ html_attrs }}>
+<html {{ HTML_ATTRS }}>
   <head>
     {{ HEAD }}
-  </head>
-  <body {{ body_attrs }}>
+  <link href="/assets/common.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css" rel="stylesheet"></head>
+  <body {{ BODY_ATTRS }}>
     {{ APP }}
-  <script type="text/javascript" src="/assets/c74491b12588421efeca.js"></script><script type="text/javascript" src="/assets/22406eebae9c40e9b15e.js"></script></body>
+  <script type="text/javascript" src="/assets/manifest.e27e4fa45dcca3abf86b.js"></script><script type="text/javascript" src="/assets/common.c1d4db95c43fd503a449.js"></script><script type="text/javascript" src="/assets/app.56e26cde9279648bf4e5.js"></script></body>
 </html>
