--- a/prod/client/assets/index.spa.html
+++ b/prod/client/assets/index.spa.html
@@ -2,8 +2,8 @@
 <html {{ HTML_ATTRS }}>
   <head>
     {{ HEAD }}
-  <link href="/assets/common.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css" rel="stylesheet"></head>
+  <link href="/assets/app.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css" rel="stylesheet"></head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
-  <script type="text/javascript" src="/assets/manifest.8a213c384e25c05c37a5.js"></script><script type="text/javascript" src="/assets/common.c1d4db95c43fd503a449.js"></script><script type="text/javascript" src="/assets/app.ccef95ba268df3c4827e.js"></script></body>
+  <script type="text/javascript" src="/assets/manifest.4d13fc681666b3ccae7e.js"></script><script type="text/javascript" src="/assets/vendor.def91941182befca8868.js"></script><script type="text/javascript" src="/assets/app.4af136f357ff844f6f2e.js"></script></body>
 </html>
